hidden burger on lg:

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -10,7 +10,7 @@
         </a>
         <button
           @click="open = !open"
-          class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black lg:hidden">
+          class="inline-flex items-center justify-center p-2 text-gray-400 hover:text-black focus:outline-none focus:text-black md:hidden">
           <svg
             class="w-6 h-6"
             stroke="currentColor"
