--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -6,7 +6,7 @@
       <div class="flex flex-row items-center justify-between lg:justify-start">
         <a href="/" class=" text-black inline-flex items-center gap-3">
          <svg class="h-4" viewBox="0 0 78 32" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M55.5 0H77.5L58.5 32H36.5L55.5 0Z" class="ccustom" fill="#283CFF"></path> <path d="M35.5 0H51.5L32.5 32H16.5L35.5 0Z" class="ccompli1" fill="#5263FF"></path> <path d="M19.5 0H31.5L12.5 32H0.5L19.5 0Z" class="ccompli2" fill="#808CFF"></path> </svg>
-          <span class="font-bold font-display">AstroSaas</span>
+          <span class="font-bold font-display">Action Agent</span>
         </a>
         <button
           @click="open = !open"
