Update: Breaking changes: Added Tailwind CSS V4

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -19,7 +19,7 @@
           </div>
         </div>
         <p
-          class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display mt-8">
+          class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
           A starter template built with Astro and Tailwind CSS for your next
           project
         </p>
@@ -30,7 +30,7 @@
       </div>
       <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
         <a
-          class="items-center justify-center h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+          class="items-center justify-center border-gray-200 h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
           href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
         >
         <a
@@ -61,7 +61,7 @@
       <div class="bg-gray-100 p-8 rounded-3xl">
         <img
           alt="#_"
-          class="relative w-full border lg:rounded-2xl object-cover rounded shadow-2xl"
+          class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
         />
       </div>
