--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -1,52 +1,46 @@
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12"
-  >
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24 scroll-mt-12">
     <div
-      class="grid grid-cols-1 gap-4 mt-6 items-center list-none lg:grid-cols-2 lg:gap-24"
-    >
+      class="grid grid-cols-1 gap-4 mt-6 items-center list-none lg:grid-cols-2 lg:gap-24">
       <div class="text-center lg:text-left">
         <div>
           <p
-            class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display"
-          >
+            class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
             Multilayered security
           </p>
           <p class="text-base mt-4 text-gray-500">
             The template is ready for production and can be deployed anywhere
-            static websites can, such as Vercel, Netlify, or GitHub Pages.
-            I tested the template in the latest versions of all browsers to handle lots of edge-cases you might encounter.
-
-
+            static websites can, such as Vercel, Netlify, or GitHub Pages. I
+            tested the template in the latest versions of all browsers to handle
+            lots of edge-cases you might encounter.
           </p>
         </div>
       </div>
       <div
-        class="lg:mt-0 mt-12 h-full hidden lg:block rounded-3xl overflow-hidden border"
-      >
-       <div class="bg-gray-100 p-8 rounded-2xl overflow-hidden">
+        class="lg:mt-0 mt-12 h-full hidden lg:block rounded-3xl overflow-hidden border border-gray-200">
+        <div class="bg-gray-100 p-8 rounded-2xl overflow-hidden">
           <img
             alt="Lexingtøn thumbnail"
-            class="border lg:rounded-3xl object-cover rounded shadow-2xl"
+            class="border border-gray-200 lg:rounded-3xl object-cover rounded shadow-2xl"
             src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
           />
-       </div>
+        </div>
       </div>
     </div>
     <div class="mt-24 w-full gap-12 grid grid-cols-1 lg:gap-24 lg:grid-cols-3">
       <div>
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-          >
+            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
             <ion-icon
               aria-label="scan outline"
               class="hydrated md h-5 w-5"
               name="scan-outline"
-              role="img"></ion-icon>
+              role="img"
+            ></ion-icon>
           </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-          >
+            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Developer experience
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
@@ -56,16 +50,15 @@
       </div><div>
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-          >
+            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
             <ion-icon
               aria-label="scan outline"
               class="hydrated md h-5 w-5"
               name="scan-outline"
-              role="img"></ion-icon>
+              role="img"
+            ></ion-icon>
           </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-          >
+            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Designers go-to app
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
@@ -75,16 +68,15 @@
       </div><div>
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
-            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10"
-          >
+            class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
             <ion-icon
               aria-label="scan outline"
               class="hydrated md h-5 w-5"
               name="scan-outline"
-              role="img"></ion-icon>
+              role="img"
+            ></ion-icon>
           </div><p
-            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0"
-          >
+            class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Easy onboarding
           </p>
         </div><p class="text-gray-500 text-sm mt-4">
