--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,22 +1,27 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+@plugin "@tailwindcss/typography";
+@plugin "@tailwindcss/forms";
+
+@theme {
+  --font-sans: "Inter", sans-serif;
+  --font-display: "Bricolage Grotesque", sans-serif;
+  --color-black: #121212;
+  --color-blue-50: #EBEDFF;
+  --color-accent-50: #EBEDFF;
+  --color-accent-100: #D6DAFF;
+  --color-accent-200: #A8B1FF;
+  --color-accent-300: #808CFF;
+  --color-accent-400: #5263FF;
+  --color-accent-500: #283CFF;
+  --color-accent-600: #0017EB;
+  --color-accent-700: #0012B3;
+  --color-accent-800: #000C75;
+  --color-accent-900: #00063D;
+
+}
 /* CSS */
 :root {
   font-family: Inter, sans-serif;
-  font-feature-settings:
-  "liga" 1,
-  "calt" 1, /* Contextual Alternates */
-  "dlig" 1, /* Discretionary Ligatures */
-  "ss07" 1, /* fSquare punctuation */
-  "ss08" 1, /* Square quotes */
-  "zero" 1, /* Slashed zero */
-  "tnum" 1, /* Tabular numbers */
-    "cv03", /* Open six */
-    "cv04" 1, /* Open nine */
-    "cv01" 1, /* Alternate one */
-    "cv09", /* Flat-top three */
-    "cv02" 1; /* Open 4 */
 }
 @supports (font-variation-settings: normal) {
   /* Use variable font if supported */
