cleaned up pricing section

--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -7,12 +7,11 @@
         Always know what you’ll pay, transparent pricing for everyone.
       </h2>
     </div>
-  </div>
-  <div class="items-center px-8 lg:pt-12 pb-24 mx-auto max-w-7xl lg:px-16">
+
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 -mx-4 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-4 lg:bg-gray-50 lg:border border-gray-500/10 lg:rounded-3xl"
+      class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2 "
     >
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Greedy</h3>
         <p class="mt-2 text-sm text-gray-500">
           Amazing for those attached to money with glue
@@ -69,7 +68,7 @@
           href="/register">Get started</a
         >
       </section>
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Wannabe</h3>
         <p class="mt-2 text-sm text-gray-500">
           Good for those trying to get there, but are too far from it.
@@ -136,7 +135,7 @@
         >
       </section>
       <section
-        class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black lg:-mt-24 lg:order-none"
+        class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black  lg:order-none"
       >
         <h3 class="mt-5 text-lg text-white font-display">Indie Hacker</h3>
         <p class="mt-2 text-sm text-accent-100">
@@ -221,7 +220,7 @@
           href="/register">Get started</a
         >
       </section>
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8">
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Big fish</h3>
         <p class="mt-2 text-sm text-gray-500">
           For even the biggest enterprise companies.
