--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,62 +1,61 @@
 <section>
   <div
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
-    <div>
-      <div class="text-center max-w-4xl mx-auto">
-        <div class="sm:flex sm:justify-center">
-          <div
-            class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
-            <a
-              href="https://lexingtonthemes.com/free-templates/"
-              class="font-semibold text-accent-600"
-              ><span class="absolute inset-0" aria-hidden="true"></span>
-              <span class="block lg:inline">
-                More free & Premium templates <span aria-hidden="true"
-                  >&rarr;</span
-                >
-              </span>
-            </a>
-          </div>
+    <div class="text-center max-w-4xl mx-auto">
+      <div class="sm:flex sm:justify-center">
+        <div
+          class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+          <a
+            href="https://lexingtonthemes.com/free-templates/"
+            class="font-semibold text-accent-600"
+            ><span class="absolute inset-0" aria-hidden="true"></span>
+            <span class="block lg:inline">
+              More free & Premium templates <span aria-hidden="true"
+                >&rarr;</span
+              >
+            </span>
+          </a>
         </div>
-        <p
-          class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
-          A starter template built with Astro and Tailwind CSS for your next
-          project
-        </p>
-        <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
-          Putting together a directory website was a challenge. Superstash lets
-          you focus on the content and makes the entire process effortless.
-        </p>
       </div>
-      <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
-        <a
-          class="items-center justify-center border-gray-200 h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
-          href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
-        >
-        <a
-          class="items-center justify-center h-12 font-medium rounded-xl focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
-          href="https://lexingtonthemes.com"
-          >Lexington Themes &nbsp; &rarr;
-        </a>
-      </div>
-      <dl
-        class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
-        <div class="text-gray-500">
-          <strong class="text-gray-700"
-            >Astro, Tailwind CSS and Alpine.js</strong
-          > ━ This are the popular technologies behind Astrosaas.
-        </div>
-        <div class="text-gray-500">
-          <strong class="text-gray-700">Includes 6 pages</strong> ━ You will find
-          this landing, faq, terms,privacy,sign up and sign in pages.
-        </div>
-        <div class="text-gray-500">
-          <strong class="text-gray-700">Different section</strong> ━ The starter
-          includes different feature sections, a pricing table, testmionial, CTA
-          and full forms. more.
-        </div>
-      </dl>
+      <p
+        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
+        A starter template built with Astro and Tailwind CSS for your next
+        project
+      </p>
+      <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
+        Putting together a directory website was a challenge. Superstash lets
+        you focus on the content and makes the entire process effortless.
+      </p>
     </div>
+    <div class="flex justify-center gap-3 mt-10 flex-col sm:flex-row">
+      <a
+        class="items-center justify-center border-gray-200 h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex duration-200 text-black lg:w-auto px-6 py-3 text-center text-black/80 w-full border"
+        href="https://github.com/michael-andreuzza/astrosaas">GitHub</a
+      >
+      <a
+        class="items-center justify-center h-10 font-medium rounded-lg focus-visible:outline-black focus:outline-none inline-flex bg-black border-2 border-black duration-200 focus-visible:ring-black hover:bg-transparent hover:border-black hover:text-black lg:w-auto px-6 py-3 text-center text-white w-full"
+        href="https://lexingtonthemes.com"
+        >Lexington Themes &nbsp; &rarr;
+      </a>
+    </div>
+    <dl
+      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-8 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start">
+      <div class="text-gray-500">
+        <strong class="text-gray-700"
+          >Astro, Tailwind CSS and Alpine.js</strong
+        > ━ This are the popular technologies behind Astrosaas.
+      </div>
+      <div class="text-gray-500">
+        <strong class="text-gray-700">Includes 6 pages</strong> ━ You will find
+        this landing, faq, terms,privacy,sign up and sign in pages.
+      </div>
+      <div class="text-gray-500">
+        <strong class="text-gray-700">Different section</strong> ━ The starter
+        includes different feature sections, a pricing table, testmionial, CTA
+        and full forms. more.
+      </div>
+    </dl>
+
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
       <div class="bg-gray-100 p-8 rounded-3xl">
         <img
